# mesmerize-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  configure-debug.sh  configure.sh
app-image-files/: mesmerize.desktop
src/: CallbackRegistry.h  CheckGlErrors.h  DeviceInformation.cpp  DeviceInformation.h  GetFilesPathsRecursively.h  GetSuffledPicturePaths.h  ImagePositionCalculator.cpp  ImagePositionCalculator.h  IndexBuffer.cpp  IndexBuffer.h  ManualTicker.cpp  ManualTicker.h  MesmerizeOptions.cpp  MesmerizeOptions.h  Picture.cpp  Picture.h  PictureLoader.cpp  PictureLoader.h  PictureRendererWithTransition.cpp  PictureRendererWithTransition.h  Renderer.cpp  Renderer.h  ResolutionScaleCalculator.cpp  ResolutionScaleCalculator.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp  shuffle.h
src/TimingFunctions/: EaseInOut.cpp  EaseInOut.h  TimingFunction.cpp  TimingFunction.h
src/shaders/: fragment.shader  vertex.shader
src/tests/: CMakeLists.txt  ImagePositionCalculatorTests.cpp  ResolutionScaleCalculatorTests.cpp  SimpleTest.cpp
